--- a/src/pug/blocks/__elements/feedback/feedback.scss
+++ b/src/pug/blocks/__elements/feedback/feedback.scss
@@ -24,7 +24,7 @@
             color: var(--dark-75);
         }
         .name {
-            font-family: var(--montserat_bold);
+            font-family: var(--montserrat_bold);
         }
     }
 }
