--- a/src/pug/blocks/__elements/toggle/toggle.pug
+++ b/src/pug/blocks/__elements/toggle/toggle.pug
@@ -1,9 +1,5 @@
-mixin toggle(h3text)
+mixin toggle(spanText)
   .toggle
-    h3= h3text
     label.toggle__item
-      input(type="checkbox" class="toggle__input" checked)
-      span.toggle__text= "получать спецпредложения"
-    label.toggle__item
-      input(type="checkbox" class="toggle__input")
-      span.toggle__text= "получать спецпредложения"
+      input(type="checkbox" class="toggle__input")&attributes(attributes)
+      span.toggle__text= spanText
