--- a/src/pug/blocks/__elements/Form_Elements.scss
+++ b/src/pug/blocks/__elements/Form_Elements.scss
@@ -16,7 +16,7 @@
 @import './feedback/feedback.scss';   
 
 body {
-    margin-bottom: 20px;
+    margin-bottom: 130px;
 }
 .block {
     display: flex;
@@ -25,7 +25,8 @@ body {
     flex-basis: 23%;
     min-width: 280px;
     flex-wrap: wrap;
-    margin: 0 3%;
+    margin: 0 4%;
+    max-width: 320px;
     h3{
         margin: 10px 0;
     }
@@ -41,7 +42,7 @@ body .block1 {
     flex-basis: 23%;
     min-width: 280px;
     flex-wrap: wrap;
-    margin: 0 3%;
+    margin: 0 5%;
 
     h3 {
         width: 100%;
