--- a/src/pug/blocks/__elements/Form_Elements.scss
+++ b/src/pug/blocks/__elements/Form_Elements.scss
@@ -51,7 +51,7 @@ body .block1 {
 .wrapper {
     display: flex;
     flex-wrap: wrap;
-    width: 60vw;    
+    width: 60%;
     align-content: space-between;
 }
 .color-75 input {
