--- a/src/pug/blocks/__elements/buttons/buttons.scss
+++ b/src/pug/blocks/__elements/buttons/buttons.scss
@@ -3,6 +3,10 @@
     flex-wrap: wrap;
     width: 320px;
     margin-top: 16px;
+
+    .btn:nth-child(2n) {
+        margin-left: 20px;
+    }
 }
 
 .btn {
@@ -14,7 +18,6 @@
     border-radius: 22px;
     cursor: pointer;
     color: white;
-    margin-right: 20px;
     color: var(--purple);
 }
 //style
