--- a/src/pug/blocks/__elements/dropdown/dropdown.scss
+++ b/src/pug/blocks/__elements/dropdown/dropdown.scss
@@ -26,7 +26,7 @@
         width: 100%;
         z-index: 1;
         border: 1px solid var(--dark-50);
-        botder-top: 0;
+        border-top: 0;
         border-bottom-left-radius: 4px;
         border-bottom-right-radius: 4px;
         cursor: default;
