--- a/src/pug/blocks/__elements/general.scss
+++ b/src/pug/blocks/__elements/general.scss
@@ -17,12 +17,13 @@ input {
 .arrow--down:after {
     content: '';
     position: absolute;
-    width: 97%;
+    width: 44px;
     height: 44px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z' fill='rgba(31, 32, 65, 0.5)'/%3E%3Cpath fill='none' d='M0 0h24v24H0V0z'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-position: right center;
     right: 2px;
+    margin-left: 97%;
 }
 .arrow--forward:after {
     content: '';
