--- a/src/pug/blocks/__elements/toggle/toggle.pug
+++ b/src/pug/blocks/__elements/toggle/toggle.pug
@@ -1,5 +1,5 @@
 mixin toggle(spanText)
-  .toggle
+  .toggle(class!=attributes.class)
     label.toggle__item
       input(type="checkbox" class="toggle__input")&attributes(attributes)
       span.toggle__text= spanText
