--- a/src/pug/blocks/__elements/dropdown/dropdown.scss
+++ b/src/pug/blocks/__elements/dropdown/dropdown.scss
@@ -15,13 +15,13 @@
     cursor: pointer;
 
     &__content {
-        box-sizing: border-box;
+        box-sizing: content-box;
         position: absolute;
         display: none;
         flex-wrap: wrap;
         background-color: #fff;
         margin-top: -1px;
-        left: 0px;
+        left: -1px;
         right: 0;
         width: 100%;
         z-index: 1;
