fixed slider and finish Cards

--- a/src/pug/blocks/__elements/Cards.pug
+++ b/src/pug/blocks/__elements/Cards.pug
@@ -17,6 +17,7 @@ include ./checkbox_rich/checkbox_rich
 include ./bullet-list/bullet-list
 include ./feedback/feedback
 include ./slider/slider
+include ./slider/slider_description
 
 block body
   .block
@@ -51,7 +52,7 @@ block body
     .block-card
       h1.number № 8 8 8 
         span.number люкс
-      span.number 9 990&#8381; в сутки
+      span.number <span class="number--bold">9 990&#8381;</span> в сутки
       .wrapper-dropdown.mt-20
         h3 прибытие
         +text-field('date','','arrow--down')(class="text-field--small")
@@ -86,8 +87,12 @@ block body
 
   .block
     input.datepicker-here(data-range="true" data-multiple-dates-separator=" - " data-inline="true" style="display: none;")
-    .block-card.size-medium.mt-30
-      +slider
+    .block-card.size-medium.mt-30.p-20
+      +slider()(class="img--0")
+      +slider_description('№888','9 900','145',true)
+    .block-card.size-medium.mt-40.p-20
+      +slider()(class="img--1")
+      +slider_description('№840','9 900','65',false)
 
 block footer
   script(src='../../Cards.js')
