--- a/src/pug/blocks/__elements/Form_Elements.pug
+++ b/src/pug/blocks/__elements/Form_Elements.pug
@@ -106,10 +106,10 @@ block body
       +option('var(--home)','Удобство','Окно в каждой из спален')
 
   .block-list.wrapper
-    .size-medium.wrapper_content
+    .wrapper_content
       h3 rich Checkbox Buttons
       +checkbox_rich()
-    .size-medium.wrapper_content
+    .wrapper_content
       h3 bulet list
       +bullet-list()
     .wrapper_content.flex-grow
