--- a/src/pug/blocks/__elements/Form_Elements.scss
+++ b/src/pug/blocks/__elements/Form_Elements.scss
@@ -74,7 +74,8 @@ body .block-list {
 }
 .wrapper_content {
     margin: 0 3vw;
-    min-width: 23vw
+    min-width: 23vw;
+    width: 266px;
 }
 .flex-grow {
     flex-grow: 1;
