--- a/src/pug/blocks/__elements/slider/slider.pug
+++ b/src/pug/blocks/__elements/slider/slider.pug
@@ -1,12 +1,7 @@
 mixin slider() 
   .slider
-    .slider__wrapper
-      .slider__wrapper__item
-        img(src='../../assets/img/appart_1.png' class="slider__wrapper__item__img")
-      .slider__wrapper__item
-        img(src='../../assets/img/appart_0.png' class="slider__wrapper__item__img")
-
-      .slider__wrapper__control.slider__wrapper--left-side
-        span.slider__wrapper__control__left-arrow
-      .slider__wrapper__control.slider__wrapper--right-side
-        span.slider__wrapper__control__right-arrow
+    .slider__img(class!=attributes.class)
+    .slider__control.slider--left-side
+      span.slider__control__left-arrow
+    .slider__control.slider--right-side
+      span.slider__control__right-arrow
