--- a/src/pug/blocks/__elements/slider/slider.scss
+++ b/src/pug/blocks/__elements/slider/slider.scss
@@ -1,23 +1,38 @@
-.slider__wrapper {
+.slider {
     display: flex;
     transition: transform 0.6s ease;
     border-radius: 4px 4px 0 0;
-
-    &__item {
+    //картинки слайдера
+    &__img {
         position: absolute;
         top: 0;
         left: 0;
         border-radius: 4px 4px 0 0;
-
-        &__img {
-            width: 100%;
-            border-radius: 4px 4px 0 0;
-        }
+        width: 100%;
+        height: 151px;
+    }
+    .img--0 {
+        background-image: url('../../../assets/img/appart_0.png');
+    }
+    .img--1 {
+        background-image: url('../../../assets/img/appart_1.png');
+    }
+    .img--2 {
+        background-image: url('../../../assets/img/appart_2.png');
+    }
+    .img--3 {
+        background-image: url('../../../assets/img/appart_3.png');
+    }
+    .img--4 {
+        background-image: url('../../../assets/img/appart_4.png');
+    }
+    .img--5 {
+        background-image: url('../../../assets/img/appart_5.png');
     }
     //создаем тень по бокам
     &__control {
         width: 42px;
-        height: 148px;
+        height: 151px;
         position: absolute;
         display: flex;
         align-items: center;
@@ -59,4 +74,40 @@
         background: linear-gradient(270deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 99.99%, rgba(255, 255, 255, 0) 100%);
     }
 
+}
+
+.slider_desription {
+    padding-top: 150px;
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(31, 32, 65, 0.1);
+    margin-bottom: 10px;
+}
+.number {
+    line-height: 17px;
+    font-size: 14px;
+}
+h1.number {
+    width: 105px;
+    margin: 0;
+    letter-spacing: 4px;
+
+    span {
+        font-size: 12px;
+        color: var(--purple);
+    }
+}
+span.number {
+    color: var(--dark-50);
+    font-size: 10px;
+}
+span.number--bold {
+    font-family: var(--montserrat_bold);
+    font-size: 12px;
+}
+.block .p-20 {
+    padding: 20px;
+    padding-bottom: 0;
 }
