--- a/src/pug/blocks/__elements/general.scss
+++ b/src/pug/blocks/__elements/general.scss
@@ -55,4 +55,17 @@ input {
 }
 @function rem($pixels) {
     @return $pixels / 14 * 1rem;
-  }
+}
+
+.mt-10 {
+    margin-top: 10px;
+}
+.mt-20 { 
+    margin-top: 20px;
+}
+.mt-30 {
+    margin-top: 30px;
+}
+.mt-40 {
+    margin-top: 40px;
+}
