--- a/src/pug/blocks/__elements/slider/slider.scss
+++ b/src/pug/blocks/__elements/slider/slider.scss
@@ -92,9 +92,10 @@
 h1.number {
     width: 105px;
     margin: 0;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
 
     span {
+        letter-spacing: normal;
         font-size: 12px;
         color: var(--purple);
     }
