--- a/src/pug/blocks/__elements/Form_Elements.scss
+++ b/src/pug/blocks/__elements/Form_Elements.scss
@@ -15,6 +15,9 @@
 @import './bullet-list/bullet-list.scss';   
 @import './feedback/feedback.scss';   
 
+html {
+    background-color: #fff;
+}
 body {
     margin-bottom: 130px;
 }
