--- a/src/pug/blocks/main.pug
+++ b/src/pug/blocks/main.pug
@@ -5,6 +5,7 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(href="../../assets/css/main.css", rel="stylesheet")
+    link(href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css",rel="stylesheet")
     block head
   body
     include ./../../assets/img/svg.svg
