--- a/src/pug/blocks/__elements/text-field/text-field.pug
+++ b/src/pug/blocks/__elements/text-field/text-field.pug
@@ -1,4 +1,3 @@
 mixin text-field(type,placeholder,arrow)
-  .text-field(class=arrow)(class!=attributes.class)
-    input(type=type placeholder=placeholder)(class!=attributes.class)
-
+  .text-field(class= arrow)
+    input(type= type, placeholder= placeholder, class= attributes.class)
