--- a/src/pug/blocks/__elements/Form_Elements.pug
+++ b/src/pug/blocks/__elements/Form_Elements.pug
@@ -4,6 +4,7 @@ block head
   link(rel="stylesheet", href="../../assets/css/Form_Elements.css")
 
 include ./text-field/text-field
+include ./text-field/text-field--two/text-field--two
 include ./checkbox/checkbox
 include ./radio-buttons/radio-buttons
 include ./toggle/toggle
@@ -31,17 +32,12 @@ block body
     +dropdown('','','Сколько Гостей')(class="arrow--down")
     h3 masked text field
     span default
-    +text-field('date','')
-    .wrapper-dropdown
-      h3 date dropdown
-      +text-field('date','','arrow--down')(class="text-field--small")
-    .wrapper-dropdown
-      h3 date dropdown
-      +text-field('date','19.08.2019','arrow--down')(class="text-field--small")
+    +text-field('text','')(class="datepicker-single")
+    +text-field--two()
     h3 filter date dropdown
     +dropdown()(class=["size-medium",'arrow--down','color-75'])
     h3 subscribe text field
-    +text-field('text','Email')(class=['flex-size-medium','arrow--forward'])
+    +text-field('text','Email','arrow--forward')(class='flex-size-medium')
   
   .block1
     h3 checkbox Buttons
