--- a/src/pug/blocks/__elements/Header&Footer.pug
+++ b/src/pug/blocks/__elements/Header&Footer.pug
@@ -9,6 +9,7 @@ include ./header/header
 include ./footer/footer
 
 block body
+  +template-logo
   +header()(class="mt-40")
   +header('Cosmin Negoita')(class="mt-40")
   +footer(class="mt-40")
