--- a/src/pug/blocks/__elements/header/header.pug
+++ b/src/pug/blocks/__elements/header/header.pug
@@ -1,10 +1,7 @@
 mixin header(boolAuth)
   .header(class!=attributes.class)
     .header__logo
-    .burger
-      .bar1
-      .bar2
-      .bar3
+    .burger.fa.fa-navicon
     .nav
       ul.nav__ul
         li: a.nav-link(href="#") Home
