--- a/src/pug/blocks/__elements/slider/slider.scss
+++ b/src/pug/blocks/__elements/slider/slider.scss
@@ -29,6 +29,24 @@
     .img--5 {
         background-image: url('../../../assets/img/appart_5.png');
     }
+    .img--6 {
+        background-image: url('../../../assets/img/appart_6.png');
+    }
+    .img--7 {
+        background-image: url('../../../assets/img/appart_7.png');
+    }
+    .img--8 {
+        background-image: url('../../../assets/img/appart_8.png');
+    }
+    .img--9 {
+        background-image: url('../../../assets/img/appart_9.png');
+    }
+    .img--10 {
+        background-image: url('../../../assets/img/appart_10.png');
+    }
+    .img--11 {
+        background-image: url('../../../assets/img/appart_11.png');
+    }
     //создаем тень по бокам
     &__control {
         width: 42px;
