--- a/src/pug/blocks/__elements/Cards.scss
+++ b/src/pug/blocks/__elements/Cards.scss
@@ -15,6 +15,7 @@
 @import './bullet-list/bullet-list.scss';
 @import './feedback/feedback.scss';
 @import './slider/slider.scss';
+@import './cards_find/cards_find.scss';
 @import './air-datepicker/datepicker.css';
 @import './air-datepicker/two-input/two-input.scss';
 
