--- a/src/pug/blocks/__elements/footer/footer.scss
+++ b/src/pug/blocks/__elements/footer/footer.scss
@@ -7,6 +7,7 @@
     height: 410px;
     background: #FFFFFF;
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+    z-index: 2;
     
     .wrapper {
         padding-top: 80px;
