--- a/src/pug/blocks/__elements/header/header.scss
+++ b/src/pug/blocks/__elements/header/header.scss
@@ -7,6 +7,7 @@
     height: 70px;
     background: #FFFFFF;
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+    z-index: 2;
 
     &__logo {
         width: 105px;
