--- a/src/pug/blocks/pages/SearchRoom.scss
+++ b/src/pug/blocks/pages/SearchRoom.scss
@@ -30,10 +30,11 @@ body {
     margin-left: 140px;
 }
 .content {
+    background-color: #fff;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    position: relative;
+    z-index: 1;
 
     .content__text {
         width: 100%;
@@ -53,12 +54,36 @@ body {
         }
     }
 }
-.content:before {
-    background: url('../../../assets/img/background_landing.png') no-repeat;
-    background-size: auto;
-    background-size: cover;
-    content: '';
-    width: 100%;
-    position: absolute;
-    height: 100%;
+.content__left-side {
+    margin-left: 140px;
+    width: 266px;
+}
+.content__right-side {
+    width: calc(100vw - 496px);
+    margin-left: 60px;
+    display: flex;
+    flex-wrap: wrap;
+
+    h3 {
+        width: 100%;
+    }
+}
+.SearchRoom {
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+
+    &__block {
+        width: 266px;
+        background: #FFFFFF;
+        box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+        border-radius: 4px;
+        position: relative;
+        margin-right: 10px;
+        margin-bottom: 20px;
+    }
+}
+.slider {
+    width: 266px;
+    position: relative;
 }
