--- a/src/pug/blocks/__elements/slider/slider.scss
+++ b/src/pug/blocks/__elements/slider/slider.scss
@@ -1,7 +1,16 @@
+.slider-wrapper {
+    width: 270px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+    border-radius: 4px;
+}
 .slider {
     display: flex;
+    position: relative;
     transition: transform 0.6s ease;
     border-radius: 4px 4px 0 0;
+    padding: 0;
+
     //картинки слайдера
     &__img {
         position: absolute;
@@ -11,48 +20,12 @@
         width: 100%;
         height: 151px;
     }
-    .img--0 {
-        background-image: url('../../../assets/img/appart_0.png');
-    }
-    .img--1 {
-        background-image: url('../../../assets/img/appart_1.png');
-    }
-    .img--2 {
-        background-image: url('../../../assets/img/appart_2.png');
-    }
-    .img--3 {
-        background-image: url('../../../assets/img/appart_3.png');
-    }
-    .img--4 {
-        background-image: url('../../../assets/img/appart_4.png');
-    }
-    .img--5 {
-        background-image: url('../../../assets/img/appart_5.png');
-    }
-    .img--6 {
-        background-image: url('../../../assets/img/appart_6.png');
-    }
-    .img--7 {
-        background-image: url('../../../assets/img/appart_7.png');
-    }
-    .img--8 {
-        background-image: url('../../../assets/img/appart_8.png');
-    }
-    .img--9 {
-        background-image: url('../../../assets/img/appart_9.png');
-    }
-    .img--10 {
-        background-image: url('../../../assets/img/appart_10.png');
-    }
-    .img--11 {
-        background-image: url('../../../assets/img/appart_11.png');
-    }
     //создаем тень по бокам
     &__control {
         width: 42px;
         height: 151px;
         position: absolute;
-        display: flex;
+        display: none;
         align-items: center;
         top: 0;
         border-radius: 4px;
@@ -94,11 +67,18 @@
 
 }
 
-.slider_desription {
-    padding-top: 150px;
-    width: 100%;
-    height: 30px;
+//описание ниже под картинкой
+.slider-content {
+    padding: 170px 20px 0 20px;
+    width: 235px;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.slider-desription {
+    display: flex;
+    width: 235px;
+    height: 30px;
     justify-content: space-between;
     border-bottom: 1px solid rgba(31, 32, 65, 0.1);
     margin-bottom: 10px;
@@ -126,7 +106,40 @@ span.number--bold {
     font-family: var(--montserrat_bold);
     font-size: 12px;
 }
-.block .p-20 {
-    padding: 20px;
-    padding-bottom: 0;
+//загружаем картинки
+.img--0 {
+    background-image: url('../../../assets/img/appart_0.png');
+}
+.img--1 {
+    background-image: url('../../../assets/img/appart_1.png');
+}
+.img--2 {
+    background-image: url('../../../assets/img/appart_2.png');
+}
+.img--3 {
+    background-image: url('../../../assets/img/appart_3.png');
+}
+.img--4 {
+    background-image: url('../../../assets/img/appart_4.png');
+}
+.img--5 {
+    background-image: url('../../../assets/img/appart_5.png');
+}
+.img--6 {
+    background-image: url('../../../assets/img/appart_6.png');
+}
+.img--7 {
+    background-image: url('../../../assets/img/appart_7.png');
+}
+.img--8 {
+    background-image: url('../../../assets/img/appart_8.png');
+}
+.img--9 {
+    background-image: url('../../../assets/img/appart_9.png');
+}
+.img--10 {
+    background-image: url('../../../assets/img/appart_10.png');
+}
+.img--11 {
+    background-image: url('../../../assets/img/appart_11.png');
 }
