--- a/src/pug/blocks/pages/SearchRoom.pug
+++ b/src/pug/blocks/pages/SearchRoom.pug
@@ -18,7 +18,6 @@ include ./../__elements/checkbox_rich/checkbox_rich
 include ./../__elements/bullet-list/bullet-list
 include ./../__elements/feedback/feedback
 include ./../__elements/slider/slider
-include ./../__elements/slider/slider_description
 include ./../__elements/header/header
 include ./../__elements/footer/footer
 include ./../__elements/cards_find/cards_find
@@ -48,41 +47,29 @@ block body
       h3.mt-40 Номера, которые мы для вас подобрали
       .SearchRoom
         .SearchRoom__block
-          +slider.img--0
-          +slider_description('№888','9 900','145',true)
+          +slider('№888','9 900','145',true).img--0
         .SearchRoom__block
-          +slider.img--1
-          +slider_description('№888','9 900','145',true)
+          +slider('№888','9 900','145',true).img--1
         .SearchRoom__block
-          +slider.img--2
-          +slider_description('№888','9 900','145',true)
+          +slider('№888','9 900','145',true).img--2
         .SearchRoom__block
-          +slider.img--3
-          +slider_description('№888','9 900','145',true)
+          +slider('№888','9 900','145',true).img--3
         .SearchRoom__block
-          +slider.img--4
-          +slider_description('№888','9 900','145',true)
+          +slider('№888','9 900','145',true).img--4
         .SearchRoom__block
-          +slider.img--5
-          +slider_description('№888','9 900','145',true)
+          +slider('№888','9 900','145',true).img--5
         .SearchRoom__block
-          +slider.img--6
-          +slider_description('№888','9 900','145',true)
+          +slider('№888','9 900','145',true).img--6
         .SearchRoom__block
-          +slider.img--7
-          +slider_description('№888','9 900','145',true)
+          +slider('№888','9 900','145',true).img--7
         .SearchRoom__block
-          +slider.img--8
-          +slider_description('№888','9 900','145',true)
+          +slider('№888','9 900','145',true).img--8
         .SearchRoom__block
-          +slider.img--9
-          +slider_description('№888','9 900','145',true)
+          +slider('№888','9 900','145',true).img--9
         .SearchRoom__block
-          +slider.img--10
-          +slider_description('№888','9 900','145',true)
+          +slider('№888','9 900','145',true).img--10
         .SearchRoom__block
-          +slider.img--11
-          +slider_description('№888','9 900','145',true)
+          +slider('№888','9 900','145',true).img--11
 
   +footer
 block footer
