--- a/src/pug/blocks/pages/SearchRoom.pug
+++ b/src/pug/blocks/pages/SearchRoom.pug
@@ -70,6 +70,9 @@ block body
           +slider('№888','9 900','145',true).img--10
         .SearchRoom__block
           +slider('№888','9 900','145',true).img--11
+      .pagination__wrapper
+        .pagination
+        span.pagination--text 1-12 из 100+ вариантов аренды
 
   +footer
 block footer
