--- a/src/pug/blocks/pages/SearchRoom.scss
+++ b/src/pug/blocks/pages/SearchRoom.scss
@@ -78,3 +78,18 @@ body {
         margin-bottom: 20px;
     }
 }
+
+.pagination__wrapper {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-content: center;
+}
+.pagination--text {
+    font-size: 14px;
+    color: var(--dark-75);
+    line-height: 24px;
+    font-family:  "Montserrat-reg";
+    margin: 0 auto;
+}
